--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
+language: r
+r:
+  - release
+sudo: false
+cache: packages
+
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+      env:
+        global:
+          - R_LIBS="http://cran.rstudio.com"
+after_success:
+  - sudo apt-get install sendmail
+  - echo -e "testestest"
+
 language: php
-
-php:
-    - 7.0
-
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq postfix
-
-before_script:
-  - sudo service postfix stop
-  - smtp-sink -d "%d.%H.%M.%S" localhost:2500 1000 &
-  - echo -e '#!/usr/bin/env bash\nexit 0' | sudo tee /usr/sbin/sendmail
-  - echo 'sendmail_path = "/usr/sbin/sendmail -t -i "' | sudo tee "/home/travis/.phpenv/versions/`php -i | grep "PHP Version" | head -n 1 | grep -o -P '\d+\.\d+\.\d+.*'`/etc/conf.d/sendmail.ini"
-
-notifications:
-  email: false
