--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
-image: alpine:latest
+language: r
+r:
+  - release
 
-pages:
-  stage: deploy
-  script:
+
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+      env:
+        global:
+          - R_LIBS="http://cran.rstudio.com"
+after_success:
   - sudo apt-get install sendmail
   - echo -e "testestest"
-  artifacts:
-    paths:
-    - public
-  only:
-  - master
-
-
