--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ matrix:
 after_success:
   - sudo apt-get install sendmail
   - echo -e "testestest"
-  - sendmail fluryro@gmail.com < test.txt
+  - sendmail roman.flury@math.uzh.ch < test.txt
